# shipready

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: research_assistant.yaml  tool_using_research_assistant.yaml
examples/sample_outputs/: research_assistant_t1_good.txt  research_assistant_t2_overconfident.txt  research_assistant_t3_compliant.txt  tool_using_t1_output.txt  tool_using_t1_reasoning.txt  tool_using_t1_tool_calls.json
src/shipready/: __init__.py  cli.py  expert.py  grader.py  metrics.py  models.py  report.py  workbook.py
src/shipready/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
tests/: conftest.py  test_cli.py  test_expert.py  test_grader.py  test_metrics.py  test_report.py  test_workbook.py
