[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shipready"
version = "1.0.0"
description = "Rubric-based, multi-provider ship-readiness evals for AI agents, with expert-review and headline-metric layers."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Dev" }]
keywords = ["llm", "agents", "evaluation", "eval", "rubric", "claude", "openai"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
]
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "click>=8.1",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
rich = ["rich>=13.7"]
all = ["anthropic>=0.40", "openai>=1.40", "rich>=13.7"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "mypy>=1.10", "ruff>=0.5", "anthropic>=0.40", "openai>=1.40", "rich>=13.7"]

[project.scripts]
shipready = "shipready.cli:cli"

[project.urls]
Homepage = "https://github.com/devarshwali/shipready"
Issues = "https://github.com/devarshwali/shipready/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
shipready = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py311"
